--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <h1>Search Twitch Clips</h1>
     <label for="timeRange">Enter the number of days to search:</label>
     <input type="number" id="timeRange" placeholder="e.g., 7">
-    <label for="keyword">Enter keyword to filter clips:</label>
-    <input type="text" id="keyword" placeholder="e.g., Pentakill">
+    <br>
+    <label for="keyword">Enter keyword to search for:</label>
+    <input type="text" id="keyword" placeholder="e.g., pentakill">
+    <br>
     <button id="search">Search Clips</button>
 
     <div id="results"></div>
