--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             padding: 10px;
             border: 1px solid #ccc;
         }
+        #loading {
+            font-size: 16px;
+            margin-top: 20px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -23,6 +28,7 @@
     <button id="search">Search Clips</button>
 
     <div id="results"></div>
+    <div id="loading"></div> <!-- Loading indicator -->
 
     <script src="script.js"></script>
 </body>
