--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             font-size: 16px;
             margin-top: 20px;
             font-weight: bold;
+            color: #666;
         }
     </style>
 </head>
