--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
 </head>
 <body>
     <h1>Search Twitch Clips</h1>
+    
     <label for="timeRange">Enter the number of days to search:</label>
     <input type="number" id="timeRange" placeholder="e.g., 7">
     <br>
+
     <label for="keyword">Enter keyword to search for:</label>
     <input type="text" id="keyword" placeholder="e.g., pentakill">
     <br>
+
+    <label for="gameSelect">Choose a game:</label>
+    <select id="gameSelect">
+        <!-- Game options will be populated here -->
+    </select>
+    <br>
+    
     <button id="search">Search Clips</button>
 
     <div id="results"></div>
